fix: address bar covering content

--- a/src/styles/base/_base.scss
+++ b/src/styles/base/_base.scss
@@ -10,7 +10,7 @@
 body {
   background-color: var(--main-color);
   width: 100vw;
-  height: 100vh;
+  height: 100dvh;
   overflow: hidden;
   color: var(--text-color);
 }
